Fix overflow behavior

--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,6 @@ iframe {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: scroll;
 }
 
 .card:hover {
@@ -126,6 +125,10 @@ iframe {
 
 .card p, .card blockquote {
   padding: 0 15%;
+}
+
+.card blockquote {
+  overflow: auto;
 }
 
 .card blockquote {
